# bitrix-admin-agent

./: CLAUDE.md
bsk-integration-hub/backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
bsk-integration-hub/backend/alembic/: env.py
bsk-integration-hub/backend/alembic/versions/: c4efb69106f9_initial_schema.py  fb0f0950920e_reference_mappings.py
bsk-integration-hub/backend/src/: __init__.py  config.py  logging_conf.py  main.py  seed.py  worker.py
bsk-integration-hub/backend/src/api/: deps.py  schemas.py  security.py
bsk-integration-hub/backend/src/connectors/: base.py  factory.py
bsk-integration-hub/backend/src/db/: base.py  models.py  repositories.py
bsk-integration-hub/backend/src/domain/: entities.py  enums.py
bsk-integration-hub/backend/src/queue/: connection.py  enqueue.py  jobs.py  locks.py
bsk-integration-hub/backend/src/services/: approval.py  context.py  engine.py  idempotency.py  mapping.py  operations.py  reference_mapping.py  snapshots.py  webhooks.py
bsk-integration-hub/backend/src/utils/: backoff.py  ids.py  time.py
bsk-integration-hub/backend/src/workflows/: base.py  contact_to_counterparty.py  create_supplier_docs.py  deal_to_order.py  (+3 more)
bsk-integration-hub/backend/tests/: conftest.py  test_admin_api.py  test_backoff.py  test_bitrix_webhook_normalize.py  test_connectors_real.py  test_create_supplier_docs.py  test_egress_guard.py  test_health.py  test_locks.py  test_moysklad_client_hardening.py  test_operations.py  test_reference_mappings.py  test_safety_flags.py  test_webhooks.py  test_workflows_extra.py
(+63 files in other folders)
